link for root colors was broke in styles, had to fix. opsie lol adjusting some spacing and making sure visuals aint super cranky

--- a/styles/index.css
+++ b/styles/index.css
@@ -19,7 +19,10 @@
 }
 
 h1{
-    margin:0px 0px 0px 1em;
+    margin:0px 0px 0px 0.5em;
     color:var(--primaryColor);
 }
 
+#about{
+    padding:1.5em;
+}
